--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.3.1",
+    "nanoid": "^3.1.23",
     "react": "^17.0.2",
-    "react-custom-scrollbars": "^4.2.1",
+    "react-cool-dimensions": "^2.0.7",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-leaflet": "^3.2.0",
@@ -30,8 +32,12 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.1.2",
+    "react-table": "^7.7.0",
     "react-use-gesture": "^9.1.3",
     "react-use-measure": "^2.0.4",
+    "react-virtual": "^2.8.0",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
@@ -84,11 +90,15 @@
     "@types/react-google-recaptcha": "^2.1.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-table": "^7.7.2",
+    "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.4",
     "@types/redux-logger": "^3.0.8",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "@welldone-software/why-did-you-render": "^6.2.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
