--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.21.1",
     "formik": "^2.2.6",
     "framer-motion": "^4.1.11",
+    "google-map-react": "^2.1.10",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
     "mapbox-gl": "^2.3.1",
@@ -81,6 +82,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/classnames": "^2.3.1",
+    "@types/google-map-react": "^2.1.2",
     "@types/jest": "^26.0.23",
     "@types/leaflet": "^1.7.0",
     "@types/node": "^12.20.11",
