--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-intersection-observer": "^8.32.0",
     "react-leaflet": "^3.2.0",
     "react-redux": "^7.2.4",
     "react-resize-detector": "^6.7.1",
